--- a/link-1(done).html
+++ b/link-1(done).html
@@ -7,7 +7,9 @@
 
 <body>
 <h1>HI</h1>
-<p><a href="Screen Shot 2022-09-23 at 11.12.36 AM.png">AI mindmap&nbsp;</a></p>
+<p><a href="mindmap link.html">AI mindmap</a></p>
+<p><a href="AI painter link.html">AI painter</a></p>
+<p><a href="AI writer link.html">AI writer&nbsp;</a></p>
 <p><a href="index.html">return</a></p>
 </body>
 </html>
