--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Andy's short story webite of the doggy and the dinosuar</title>
+  <title>Andy's introduction</title>
   <link href="../../Downloads/style.css" rel="stylesheet" type="text/css" />
 </head>
-  Andy Jiang
 <body>
-  <h3>Who am I?</h3>
-  <p>I'm a 12 years old teenager called 蒋承序 in chinese, and Andy in English</p>
-  <p>one of my hobby is to fly myself.</p>
-  <p>Also, I hate barbers.</p>
-<p><a href="link-1(done).html">Next, the AI mindmap&nbsp; &nbsp;&nbsp;</a></p>
-<p><a href=""</p>
+  <h1 style="color:teal">Andy Jiang</h1>
+  <h3 style="color:goldenrod">Who am I?</h3>
+  <p style="font-family:verdana;">I'm a 12 years old teenager in G7.6 called 蒋承序 in chinese, and Andy in English</p>
+  <p style="font-family:courier;">one of my hobby is to fly myself.</p>
+  <p style="color:darkorange">Also, I hate barbers.</p>
+<p><a href="link-1(done).html">&nbsp; &nbsp; &nbsp; &nbsp;click here to know more&nbsp;&nbsp;</a></p>
+<video width="320" height="240" controls>
+  <source src="intro video.mp4" type="video/mp4">
+</video>
+<body background="image1.jpg">
   <script src="../../Downloads/script.js"></script>
 
  <!--
@@ -24,5 +27,5 @@
   -->
   <script src="https://replit.com/public/js/replit-badge.js" theme="red" defer></script> 
 </body>
-
+	
 </html>
